   - Bugfix: Accessing freed memory (when converting a wrong character set)
   - Compatibility with gcc 4.3 (thanks to Martin Michlmayr for providing a
        patch; this was debian bug #420969 for version 2.2.6)
   - Feature: Deleting messages (pop protocol; this is feature request #1074262
        by LostYack and others including Bogdan Lisovich)
   - Feature: Message context menu

Version 2.2.7
 * Robert Sowada
   - Changed version to 2.2.7
   - Backport of signal code cleanup (from gnubiff 2.3.0 CVS)
   - Backport of showing/hiding popup via signals feature (from
        gnubiff 2.3.0 CVS; thanks to Jonathan Hitchcock for providing a patch)
   - Bugfix: Pointer tests for being not NULL
   - Compatibility with gcc 4.3 (thanks to Martin Michlmayr for providing a
        patch; this was debian bug #420969)
	
Version 2.2.6		2007-04-09 18:37
 * Robert Sowada
   - Changed version to 2.2.6
   - Updated Swedish translation (thanks to Daniel Nylander)
   - Added Daniel Nylander to contributors
   - Backport of infinite loop bugfix (from gnubiff 2.3.0 CVS)
	
Version 2.2.5		2007-01-28 16:08
 * Robert Sowada
   - Changed version to 2.2.5
   - Fixed incompatibility in the about dialog (API change from gtk 2.8 to
        gtk 2.10?; this bug was reported by Sebastian Breier as #1621270)
   - Bugfix: Handling of the "delete-event" in the about dialog
   - Added Sebastian Breier to contributors
   - Bugfix: Determining initial image size (thanks to Felipe Csaszar for
        reporting this bug)
   - Added Felipe Csaszar to contributors
   - Changed years in the About dialog to 2007

Version 2.2.4		2006-12-10 19:47
 * Robert Sowada
   - Changed version to 2.2.4
   - Bugfix: Option "filter_global_last" was not available
   - Updated intltool (to version 0.35.0) and gettext (to version 0.15) files
   - Feature: Portuguese translation (thanks to Gunther Furtado)
   - Updated German translation
   - Added Gunther Furtago to contributors
	
Version 2.2.3		2006-10-15 18:46