@@ -87,6 +87,11 @@ Gnubiff_Options::add_options_applet (gboolean deprecated)
 		"Shall the gnubiff applet window have window manager decoration?",
 								 false, OPTFLG_NONE, OPTGUI_TOGGLE,
 								 "applet_decoration_check"));
+	// APPLET_TASKBAR
+	add_option (new Option_Bool ("applet_taskbar", OPTGRP_POPUP,
+		"Shall the gnubiff applet window appear in the taskbar?",
+								 true, OPTFLG_NONE, OPTGUI_TOGGLE,
+								 "applet_taskbar_check"));
 	// APPLET_BE_STICKY
 	add_option (new Option_Bool ("applet_be_sticky", OPTGRP_APPLET,
 		"Shall the gnubiff applet window be sticky (i.e. appear on all "
@@ -689,6 +694,11 @@ Gnubiff_Options::add_options_popup (gboolean deprecated)
         "to true.",
 								 false, OPTFLG_NONE, OPTGUI_TOGGLE,
 								 "popup_acceptfocus_check"));
+	// POPUP_TASKBAR
+	add_option (new Option_Bool ("popup_taskbar", OPTGRP_POPUP,
+		"Shall the gnubiff popup window appear in the taskbar?",
+								 false, OPTFLG_NONE, OPTGUI_TOGGLE,
+								 "popup_taskbar_check"));
 	// POPUP_BE_STICKY
 	add_option (new Option_Bool ("popup_be_sticky", OPTGRP_POPUP,
 		"Shall the gnubiff popup window be sticky (i.e. appear on all "
