@@ -431,8 +431,9 @@ Popup::show (std::string name)
 	else
 		gtk_window_unstick (dialog);
 	gtk_window_set_keep_above (dialog, biff_->value_bool ("popup_keep_above"));
-	gtk_window_set_skip_pager_hint (dialog,
-									!biff_->value_bool ("popup_pager"));
+	gtk_window_set_skip_pager_hint (dialog,!biff_->value_bool ("popup_pager"));
+	gtk_window_set_skip_taskbar_hint (dialog,
+									  !biff_->value_bool ("popup_taskbar"));
 
 	g_mutex_lock (timer_mutex_);
 	if (poptag_ > 0) 
